# ARGUS-Surveillance-Intelligence-System

./: .gitignore  README.md  pyproject.toml  telemetry.py
api/: __init__.py  main.py
common/: __init__.py  config.py
configs/: fsm.yaml
configs/cameras/: cam01.yaml  cam02.yaml  cam03.yaml  cam04.yaml  cam05.yaml  cam06.yaml  cam07.yaml  cam08.yaml  cam09.yaml  cam10.yaml  cam11.yaml  cam12.yaml
perception/: __init__.py  camera_worker.py  detector.py  reid.py  static_channel.py
reasoner/: __init__.py  behaviors.py  entities.py  events.py  fsm.py  ownership.py  scene_reasoner.py
scripts/: class_census.py  export_cvat.py  organize_footage.py  pseudo_label.py  resplit_by_video.py  sample_frames.py  vlm_smoke.py
tests/: test_config.py  test_fsm.py
vlm/: __init__.py  enrich.py  fingerprint.py  providers.py  pseudo_label.py  service.py  sweeps.py
